<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.minhagasosa.ComparaGastosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/compare_gastos"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/consumo_mes_anterior"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/distancia_mes_anterior"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

        <include layout="@layout/graph_content" />

        <include layout="@layout/graph_content" />
    </LinearLayout>
</ScrollView>
