<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.minhagasosa.activites.maps.GasStationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            fab:contentScrim="?attr/colorPrimary"
            fab:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                fab:layout_collapseMode="pin"
                fab:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include
        layout="@layout/content_gas_station"
        android:id="@+id/content_layout"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        fab:layout_anchor="@id/content_layout"
        fab:layout_anchorGravity="bottom|end"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quantum_ic_clear_white_24"
            fab:fab_label="@string/add_comment"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_wrong_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quantum_ic_clear_white_24"
            fab:fab_label="@string/wrong_prices"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_wrong_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quantum_ic_clear_white_24"
            fab:fab_label="@string/wrong_localization"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_closed_gas_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/quantum_ic_clear_white_24"
            fab:fab_label="@string/closed_gas_station"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
